# rsomics-tsv-filter

./: Cargo.toml  README.md
src/: cli.rs  fields.rs  filter.rs  lib.rs
tests/: compat.rs
tests/golden/: age_eq.out  age_ldeq.out  age_ne.out  any_score.out  baddigit.csv  barecr.csv  barecr.out  barequote.csv  barequote_lz.out  cmt.csv  cmt_ln.out  cols.csv  crlf.csv  delhdr.out  fuzzy_any.out  fuzzy_cols.out  idx_gt.out  linenum.out  miderr.csv  nohdr.csv  nohdr.out  nohdr_ln.out  people.tsv  quoted.csv  quoted.out  ragged.csv  ragged_ign.out  range_all.out  score_ge.out  trailcr.csv  trailcr.out  tsv_dD.out
